# data-extraction-tool

./: .dockerignore  .env  .gitignore  DEPLOY-ORACLE.md  Makefile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  setup-macos.sh  setup-oracle.sh  setup-ssl.sh  verify-install.sh
backend-python/: .dockerignore  .env  .env.bak  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend-python/app/: __init__.py  main.py
backend-python/app/core/: __init__.py  banks.py  config.py  database.py  exceptions.py  redis_client.py
backend-python/app/middleware/: error_handler.py  rate_limiter.py
backend-python/app/models/: __init__.py  comparison.py  extracted_data_v2.py  extracted_intelligence.py  raw_extraction.py
backend-python/app/pipelines/: __init__.py  base_pipeline.py  cashback_pipeline.py  dining_pipeline.py  fee_waiver_pipeline.py  golf_pipeline.py  insurance_pipeline.py  lifestyle_pipeline.py  lounge_access_pipeline.py  models.py  movie_pipeline.py  pipeline_registry.py  rewards_points_pipeline.py  travel_benefits_pipeline.py
backend-python/app/schemas/: __init__.py  batch.py  comparison.py  extraction.py
backend-python/app/services/: __init__.py  batch_service.py  cache_service.py  comparison_service.py  enhanced_extraction_service.py  enhanced_llm_service.py  enhanced_web_scraper_service.py  intelligence_extraction_service.py  interactive_scraper.py  ollama_client.py  pdf_service.py  playwright_scraper.py  raw_extraction_storage_service.py  structured_scraper.py  (+2 more)
backend-python/chroma_data/: chroma.sqlite3
(+37 files in other folders)
