[tool.poetry]
name = "data-extraction-api"
version = "1.0.0"
description = "Credit Card Data Extraction API with LLM Integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
motor = "^3.6.0"
beanie = "^1.27.0"
redis = "^5.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.11.4"
loguru = "^0.7.2"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"
slowapi = "^0.1.9"
ollama = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
